A Dash of web development, nothing concrete yet

--- a/Dashboad/src/main/webpage/motors.html
+++ b/Dashboad/src/main/webpage/motors.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 
-<script src=""></script>
+<script src="js/main.js"></script>
 <script src="js/motorDisp.js"></script>
 
 <body>
