--- a/Dashboad/src/main/webpage/index.html
+++ b/Dashboad/src/main/webpage/index.html
@@ -44,11 +44,12 @@
 
 <script src="js/main.js"></script>
 
-<body style="margin:0px">
+<body style="margin:0px; height:100vh">
     <div title="" style="width:100%;overflow:hidden; height:44px;" class = "topnav">
-        <p style="width:44px; height:inherit; display:inline-block; background-color: #f2f2f2; order:-1; margin-top: 0%; margin-bottom: 0%;" id=""></p>
-        <a onclick="changeDisplayToHome()">Home</a>
-        <a onclick="changeDisplayToMotors()">Motors</a>
+        <p style="width:44px; height:inherit; display:inline-block; background-color: red; order:-1; margin-top: 0%; margin-bottom: 0%;" id="status-indicator"></p>
+        <a onclick="changeDisplayToHome()"   title="Home display">Home</a>
+        <a onclick="changeDisplayToMotors()" title="Motors">Motors</a>
+        <a onclick="changeDisplayToConfig()" tite="Robot config">Config</a>
     </div>
 
     <script>startStatusUpdating()</script>
