--- a/ConfigSystemV2/src/main/webpage/configs/drivetrain/DriveTrainConfig.html
+++ b/ConfigSystemV2/src/main/webpage/configs/drivetrain/DriveTrainConfig.html
@@ -1,10 +1,88 @@
-
-
 <head>
 
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        .content {
+            padding: 0 18px;
+            background-color: white;
+            max-height: 0;
+            overflow: hidden;
+            transition: max-height 0.2s ease-out;
+        }
+
+        /* Style the button that is used to open and close the collapsible content */
+        .collapsible {
+            background-color: #eee;
+            color: #444;
+            cursor: pointer;
+            padding: 18px;
+            width: 100%;
+            border: none;
+            text-align: left;
+            outline: none;
+            font-size: 15px;
+        }
+
+        /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+        .collapsible:hover {
+            background-color: #ccc;
+        }
+
+        .collapsible:after {
+            content: '\02795';
+            /* Unicode character for "plus" sign (+) */
+            font-size: 13px;
+            color: white;
+            float: right;
+            margin-left: 5px;
+        }
+
+        .active:after {
+            content: "\2796";
+            /* Unicode character for "minus" sign (-) */
+        }
+    </style>
 </head>
 
 <body>
-    
-    <p>Insert Drive Config</p>
+    <button type="button" class="collapsible">Right Lead Motor</button>
+    <div id="right-lead-motor-disp" class="content">
+        <p>Example Text</p>
+    </div>
+
+    <button type="button" class="collapsible">Right Follow Motor</button>
+    <div id="right-follow-motor-disp" class="content">
+        <p>Example Text</p>
+    </div>
+
+    <button type="button" class="collapsible">Left Lead Motor</button>
+    <div id="left-lead-motor-disp" class="content">
+        <p>Example Text</p>
+    </div>
+
+    <button type="button" class="collapsible">Left Follow Motor</button>
+    <div id="lef-follow-motor-disp" class="content">
+        <p>Example Text</p>
+    </div>
+
+    <script>
+        var coll = document.getElementsByClassName("collapsible");
+        var i;
+
+        for (i = 0; i < coll.length; i++) {
+            coll[i].addEventListener("click", function () {
+                this.classList.toggle("active");
+                var content = this.nextElementSibling;
+                if (content.style.maxHeight) {
+                    content.style.maxHeight = null;
+                } else {
+                    content.style.maxHeight = content.scrollHeight + "px";
+                }
+            });
+        }
+    </script>
 </body>
